--- a/frontend/src/pages/Dashboard.css
+++ b/frontend/src/pages/Dashboard.css
@@ -30,16 +30,16 @@
 
 .dashboard__userTop {
   display: flex;
-  align-items: center;
   flex-direction: column;
   justify-content: center;
   /* border-bottom: 1px solid rgba(0, 0, 0, 0.3); */
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .user__image {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .user__imageAvatar {
