--- a/frontend/src/pages/Store.css
+++ b/frontend/src/pages/Store.css
@@ -37,6 +37,10 @@
 
 .gig__image {
   cursor: pointer;
+  overflow-x: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .gig__type {
@@ -46,6 +50,7 @@
   margin-bottom: 0.6rem !important;
   cursor: pointer;
   display: inline-block;
+  text-transform: capitalize;
 }
 
 .gig__type:hover::after {
@@ -59,6 +64,11 @@
 
 .gig__title {
   cursor: pointer;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .gig__seller {
@@ -90,6 +100,10 @@
 
 .gig__footer span {
   cursor: pointer;
+}
+
+.gig__footerPrice {
+  font-weight: 500;
 }
 
 @media (min-width: 1150px) {
