--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -2,9 +2,10 @@
   background-color: #f4f7ff;
   width: 100vw;
   min-height: 100vh;
-  position: absolute;
+  position: sticky;
   height: 100%;
   top: 0;
+  overflow-y: scroll;
 }
 
 .chat {
@@ -24,8 +25,21 @@
   margin-left: 1rem;
 }
 
-.chat__contacts {
-  /* margin-top: 1rem; */
+.chat__bar {
+  background-color: white;
+  /* padding: 2rem !important; */
+  border-radius: 1rem;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1rem;
+}
+
+.chat__bar .chat__contact {
+  flex-direction: column;
+  align-items: center;
+}
+
+.chat__bar .chat__contact:hover {
+  background-color: inherit;
 }
 
 .chat__contact {
@@ -41,10 +55,14 @@
   background-color: rgb(253, 253, 174);
 }
 
+.chat__contactImage {
+  width: 50px;
+  height: 50px;
+}
+
 .chat__contactImage img {
   border-radius: 50%;
   width: 50px;
-  margin-right: -20px;
 }
 
 .chat__contactNameMessage p {
@@ -168,4 +186,38 @@
   align-items: center;
   justify-content: center;
   padding-right: 1px;
+}
+
+@media (max-width: 820px) {
+  .chat__contact {
+    padding: 0.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .chat__bar .chat__contact {
+    padding: 0.5rem;
+  }
+
+  .chat__bar .chat__contactImage img {
+    width: 40px;
+  }
+
+  .chat__bar .chat__contactImage {
+    height: 40px;
+    width: 40px;
+  }
+
+  .chat__bar .chat__contactNameMessage h6 {
+    font-weight: 400;
+    margin-top: 5px;
+    font-size: 13px;
+    margin-bottom: 0;
+    width: 50px;
+    text-align: center;
+  }
+
+  .chat__messages {
+    height: calc(100vh - 210px);
+  }
 }
