--- a/frontend/src/components/Aside.css
+++ b/frontend/src/components/Aside.css
@@ -7,21 +7,22 @@
   box-shadow: 5px 0 10px rgba(0, 0, 0, 0.1);
   z-index: 99999;
   transition: left 0.5s;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 0;
 }
 
-.close {
+.close__container {
   text-align: right;
-  font-size: 2rem !important;
-}
-
-.close:focus,
-.close:active {
-  outline-width: 0;
 }
 
 .aside__links {
   list-style: none;
   padding-left: 2rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .aside__item {
@@ -30,7 +31,7 @@
 
 .aside__link {
   color: var(--black);
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1.4rem;
 }
 
