--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -19,7 +19,7 @@
 
 .main__slogan {
   font-weight: 600;
-  color: var(--black);
+  color: var(--secondary-color);
   font-size: 3rem;
   text-align: center;
   margin-bottom: 2rem;
@@ -34,7 +34,7 @@
 }
 
 .main__buttons button {
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   padding: 0.7rem 1.3rem;
   border: none;
   border-radius: 5px;
@@ -42,8 +42,8 @@
 }
 
 .main__buttonAbout {
-  color: var(--yellow);
-  background-color: var(--black) !important;
+  color: var(--primary-color);
+  background-color: var(--secondary-color) !important;
   margin-left: 1rem;
 }
 
