--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,20 +1,20 @@
 .navbar__sticky {
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  color: var(--black) !important;
+  color: var(--secondary-color) !important;
   transition: all 0.5s;
 }
 
 .navbar__sticky a {
-  color: var(--black) !important;
+  color: var(--secondary-color) !important;
 }
 
 .navbar__sticky h1 {
-  color: var(--black) !important;
+  color: var(--secondary-color) !important;
 }
 
 .navbar__sticky .navbar__linkRegister {
-  border-color: var(--black);
+  border-color: var(--secondary-color);
   text-shadow: none;
 }
 
@@ -62,7 +62,7 @@
   display: block;
   height: 3px;
   width: 100%;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   margin-bottom: -7px;
 }
 
@@ -73,13 +73,13 @@
 }
 
 .navbar__title .fa-bars path {
-  color: var(--black);
+  color: var(--secondary-color);
 }
 
 .navbar h1 {
   margin-bottom: 0 !important;
   margin-left: 1rem;
-  color: var(--black);
+  color: var(--secondary-color);
 }
 
 .navbar__center {
@@ -94,13 +94,13 @@
   font-weight: 500;
   text-transform: capitalize;
   font-size: 1rem;
-  color: var(--black);
+  color: var(--secondary-color);
 }
 
 .navbar a:hover,
 .navbar a:active {
   text-decoration: none;
-  color: var(--black);
+  color: var(--secondary-color);
 }
 
 .navbar a:hover::after,
@@ -109,7 +109,7 @@
   display: block;
   height: 5px;
   width: 100%;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   margin-bottom: -5px;
 }
 
@@ -164,7 +164,7 @@
 }
 
 .navbar__linkRegister {
-  border: 1px solid var(--black);
+  border: 1px solid var(--secondary-color);
   padding: 0.3rem 0.5rem;
   border-radius: 3px;
   margin: 0 1rem;
@@ -172,9 +172,9 @@
 
 .navbar__linkRegister:hover,
 .navbar__linkRegister:active {
-  border-color: var(--yellow);
-  background-color: var(--yellow);
-  color: var(--black) !important;
+  border-color: var(--primary-color);
+  background-color: var(--primary-color);
+  color: var(--secondary-color) !important;
 }
 
 .navbar__linkRegister:hover::after,
@@ -246,7 +246,7 @@
 }
 
 .navbar__user .dropdown-item:active {
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
 }
 
 .navbar__user a {
