--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: var(--black);
+  background-color: var(--secondary-color);
   overflow: auto;
 }
 
@@ -32,7 +32,7 @@
   display: block;
   height: 5px;
   width: 80px;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   position: absolute;
 }
 
@@ -129,11 +129,11 @@
 }
 
 .register__phone .react-tel-input .selected-flag {
-  background-color: var(--yellow) !important;
+  background-color: var(--primary-color) !important;
 }
 
 .register__phone .react-tel-input .selected-flag:hover {
-  background-color: var(--yellow) !important;
+  background-color: var(--primary-color) !important;
 }
 
 .register__checkbox {
@@ -158,24 +158,24 @@
 
 .register__submit a {
   margin-bottom: 0;
-  color: var(--black);
+  color: var(--secondary-color);
   font-size: 0.9rem;
   font-weight: 500;
-  border-bottom: 1px solid var(--black);
+  border-bottom: 1px solid var(--secondary-color);
   cursor: pointer;
 }
 
 .register__submit a:hover,
 .register__submit a:active {
   text-decoration: none;
-  color: var(--black);
+  color: var(--secondary-color);
 }
 
 .register__submit button {
-  border: 1px solid var(--yellow);
-  color: var(--black);
+  border: 1px solid var(--primary-color);
+  color: var(--secondary-color);
   font-weight: 500;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   border-radius: 5px;
   padding: 7px 15px;
 }
