edit color buttons in dashboard modals

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #8ecae6;
   --secondary-color: #001f2b;
+  --third-color: #219ebc;
 }
 
 * {
@@ -74,4 +75,15 @@ p {
 
 ul {
   list-style: none;
+}
+
+.btn-info {
+  background-color: var(--primary-color) !important;
+  border-color: var(--primary-color) !important;
+}
+
+.btn-info:hover,
+.btn-info:active {
+  background-color: var(--third-color) !important;
+  border-color: var(--third-color) !important;
 }
