--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,12 +1,11 @@
 .navbar__sticky {
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  color: var(--secondary-color) !important;
   transition: all 0.5s;
 }
 
 .navbar__sticky a {
-  color: var(--secondary-color) !important;
+  color: #646369;
 }
 
 .navbar__sticky h1 {
@@ -80,6 +79,8 @@
   margin-bottom: 0 !important;
   margin-left: 1rem;
   color: var(--secondary-color);
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
 .navbar__center {
@@ -94,23 +95,13 @@
   font-weight: 500;
   text-transform: capitalize;
   font-size: 1rem;
-  color: var(--secondary-color);
+  color: #646369;
 }
 
 .navbar a:hover,
 .navbar a:active {
   text-decoration: none;
   color: var(--secondary-color);
-}
-
-.navbar a:hover::after,
-.navbar a:active::after {
-  content: '';
-  display: block;
-  height: 5px;
-  width: 100%;
-  background-color: var(--primary-color);
-  margin-bottom: -5px;
 }
 
 .navbar__left {
