--- a/frontend/src/components/dashboardModals/dashboardModal.css
+++ b/frontend/src/components/dashboardModals/dashboardModal.css
@@ -1,3 +1,11 @@
+.modal-header h4 {
+  color: var(--secondary-color) !important;
+}
+
+.modal-body h6 {
+  color: var(--secondary-color) !important;
+}
+
 .modal-body {
   text-align: left;
 }
