--- a/frontend/src/components/Chat.css
+++ b/frontend/src/components/Chat.css
@@ -50,10 +50,6 @@
   padding: 0.5rem 1rem;
 }
 
-.chat__contacts:hover {
-  background-color: rgb(253, 253, 174);
-}
-
 .chat__contactImage {
   width: 50px;
   height: 50px;
@@ -62,6 +58,10 @@
 .chat__contactImage img {
   border-radius: 50%;
   width: 50px;
+}
+
+.chat__contactNameMessage h6 {
+  color: var(--secondary-color);
 }
 
 .chat__contactNameMessage p {
@@ -102,12 +102,13 @@
 }
 
 .chat__messageBody::-webkit-scrollbar {
-  width: 3px;
+  width: 7px;
   background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50px;
 }
 
 .chat__messageBody::-webkit-scrollbar-thumb {
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   border-radius: 50px;
 }
 
@@ -143,7 +144,7 @@
   margin-right: 0.5rem;
   margin-left: 8rem;
   font-size: 15px;
-  background-color: var(--yellow);
+  background-color: var(--primary-color);
   border-radius: 1rem;
   padding: 1rem 1.5rem;
   border-bottom-right-radius: 0;
